bdr.BDR.scala.error
Compilation error:
BDR:3: error: not found: value getIndication
  if (getIndication()==R){
      ^BDR:3: error: not found: value R
  if (getIndication()==R){
                       ^BDR:6: error: not found: value getIndication
  else if (getIndication()==L){
           ^BDR:6: error: not found: value L
  else if (getIndication()==L){
                            ^BDR:9: error: not found: value getIndication
  else if (getIndication()==I){
           ^BDR:9: error: not found: value I
  else if (getIndication()==I){
                            ^BDR:13: error: not found: value getIndication
  else if (getIndication()==A){
           ^BDR:13: error: not found: value A
  else if (getIndication()==A){
                            ^BDR:15: error: not found: value getIndication
  else if (getIndication()==B){
           ^BDR:15: error: not found: value B
  else if (getIndication()==B){
                            ^BDR:17: error: not found: value getIndication
  else if (getIndication()==C){
           ^BDR:17: error: not found: value C
  else if (getIndication()==C){
                            ^BDR:19: error: not found: value getIndication
  else if (getIndication()==Z){
           ^BDR:19: error: not found: value Z
  else if (getIndication()==Z){
                            ^BDR:21: error: not found: value getIndication
  else if (getIndication()==Y){
           ^BDR:21: error: not found: value Y
  else if (getIndication()==Y){
                            ^BDR:23: error: not found: value getIndication
  else if (getIndication()==X){
           ^BDR:23: error: not found: value X
  else if (getIndication()==X){
                            ^