bdr.BDR.scala.code
var finished=false
while (finished!=true) {
  if (getIndication()==R){
    right()
    forward()}
  else if (getIndication()==L){
    left()
    forward()}
  else if (getIndication()==I){
    left()
    left()
    forward()}
  else if (getIndication()==A){
    forward()}
  else if (getIndication()==B){
    forward(2)}
  else if (getIndication()==C){
    forward(3)}
  else if (getIndication()==Z){
    backward()}
  else if (getIndication()==Y){
    backward(2)}
  else if (getIndication()==X){
    backward(3)}
  else finished=true}